@@ -12,7 +12,10 @@
 
         * include/Rcpp/hash/hash.h: new implementation of IndexHash, based on
 	Simon's fastmatch package
-        * include/Rcpp/sugar/functions/match.h: using new IndexHash
+        * include/Rcpp/sugar/functions/match.h: more efficient version of match
+        using new IndexHash
+        * include/Rcpp/sugar/functions/unique.h: more efficient version of 
+        unique and in using IndexHash
         * include/Rcpp/vector/Vector.h: more efficiently create Vector from 
         sugar expression that are already vectors, i.e. grab the SEXP
         
